manifest/deployment.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "portal"
  namespace: ${PORTAL_NAMESPACE}
spec:
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: "portal"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: "portal"
    spec:
      containers:
        - name: "portal"
          image: "${AZURE_CONTAINER_REGISTRY}.azurecr.io/${IMAGE_NAME}:${IMAGE_VERSION}" 
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - portal
            topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: portal-np
  namespace: ${PORTAL_NAMESPACE}
  labels:
    app: portal
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: portal
