manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
  namespace: ${PORTAL_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx" 
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRule &REQUEST_HEADERS:X-Azure-FDID \"@eq 0\"  \"log,deny,id:106,status:403,msg:\'Front Door ID not present\'\"
      SecRule REQUEST_HEADERS:X-Azure-FDID \"@rx ^(?!${FDID}).*$\"  \"log,deny,id:107,status:403,msg:\'Wrong Front Door ID\'\"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/limit-rps: "30"
    # nginx.ingress.kubernetes.io/limit-rpm: "3000"
spec:
  rules:
  - host: ${NGINX_HOST}
    http:
      paths:
        - path: /portal/(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: portal-np
              port:
                number: 80
